Improve robustness of sphere-updates process.
Signed-off-by: Jon Seymour <jon@wildducktheories.com>

--- a/ninjapack/root/etc/init/sphere-updates.conf
+++ b/ninjapack/root/etc/init/sphere-updates.conf
@@ -18,6 +18,7 @@ env PID=/var/run/sphere-updates.pid
 
 script
     . /etc/profile.d/ninja.sh
+    DEBUG=t #be verbose
     exec start-stop-daemon -d $APPDIR --start --chuid $RUN_AS --make-pidfile --pidfile $PID --exec $APP -- $(sphere-client-args) >> $LOG 2>&1
 end script
 
