--- a/ninjapack/conf/pkg.conf
+++ b/ninjapack/conf/pkg.conf
@@ -10,7 +10,8 @@ sphere-updates_version() {
     VERSION=`grep "const Version " ${SRC_DIR}/version.go | sed -E 's/.*"(.+)"$/\1/'`
 }
 
-trusty-spheramid() {
+common() {
+	local distro=$1
   export GOPATH=/usr/local/go
   export PATH=$PATH:$GOPATH/bin
 
@@ -20,4 +21,10 @@ trusty-spheramid() {
   mkdir -p ${STAGE_DIR}/opt/ninjablocks/sphere-updates
   cp bin/* ${STAGE_DIR}/opt/ninjablocks/sphere-updates
   popd
+
+  rsync -rc ${SRC_DIR}/ninjapack/$distro/ ${STAGE_DIR}/
+}
+
+trusty-spheramid() {
+	common ubuntu
 }
